--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.0.2",
     "boostrap": "^2.0.0",
     "bootstrap-icons": "^1.0.0-alpha3",
+    "chart.js": "^2.9.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
