--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
     "@angular/forms": "~9.0.2",
+    "@angular/localize": "~9.0.2",
     "@angular/material": "^9.2.2",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "boostrap": "^2.0.0",
+    "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0-alpha3",
     "chart.js": "^2.9.3",
     "rxjs": "~6.5.4",
