--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.1.0",
+    "@agm/js-marker-clusterer": "^1.1.0",
     "@angular/animations": "~9.0.2",
     "@angular/cdk": "^9.2.2",
     "@angular/common": "~9.0.2",
@@ -22,11 +24,13 @@
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@google/markerclusterer": "^2.0.8",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0-alpha3",
     "chart.js": "^2.9.3",
+    "js-marker-clusterer": "^1.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -36,9 +40,10 @@
     "@angular/cli": "~9.0.3",
     "@angular/compiler-cli": "~9.0.2",
     "@angular/language-service": "~9.0.2",
-    "@types/node": "^12.11.1",
+    "@types/googlemaps": "^3.39.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
