--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~9.0.2",
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.0.2",
     "@angular/localize": "~9.0.2",
     "@angular/material": "^9.2.2",
@@ -30,6 +31,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-icons": "^1.0.0-alpha3",
     "chart.js": "^2.9.3",
+    "firebase": "^7.14.4",
     "js-marker-clusterer": "^1.0.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
